--- a/Employees_db.ipynb
+++ b/Employees_db.ipynb
@@ -214,6 +214,545 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>emp_title_id</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>473302</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1953-07-25</td>\n",
+       "      <td>Hideyuki</td>\n",
+       "      <td>Zallocco</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1990-04-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>475053</td>\n",
+       "      <td>e0002</td>\n",
+       "      <td>1954-11-18</td>\n",
+       "      <td>Byong</td>\n",
+       "      <td>Delgrande</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1991-09-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>57444</td>\n",
+       "      <td>e0002</td>\n",
+       "      <td>1958-01-30</td>\n",
+       "      <td>Berry</td>\n",
+       "      <td>Babb</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1992-03-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>421786</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-09-28</td>\n",
+       "      <td>Xiong</td>\n",
+       "      <td>Verhoeff</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1987-11-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>282238</td>\n",
+       "      <td>e0003</td>\n",
+       "      <td>1952-10-28</td>\n",
+       "      <td>Abdelkader</td>\n",
+       "      <td>Baumann</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1991-01-18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no emp_title_id  birth_date  first_name  last_name sex   hire_date\n",
+       "0  473302        s0001  1953-07-25    Hideyuki   Zallocco   M  1990-04-28\n",
+       "1  475053        e0002  1954-11-18       Byong  Delgrande   F  1991-09-07\n",
+       "2   57444        e0002  1958-01-30       Berry       Babb   F  1992-03-21\n",
+       "3  421786        s0001  1957-09-28       Xiong   Verhoeff   M  1987-11-26\n",
+       "4  282238        e0003  1952-10-28  Abdelkader    Baumann   F  1991-01-18"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employees=pd.read_sql('SELECT * FROM \"Employees\"', connection)\n",
+    "employees.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>salaries</th>\n",
+       "      <th>emp_title_id</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>60117</td>\n",
+       "      <td>e0003</td>\n",
+       "      <td>1953-09-02</td>\n",
+       "      <td>Georgi</td>\n",
+       "      <td>Facello</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-06-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>65828</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1964-06-02</td>\n",
+       "      <td>Bezalel</td>\n",
+       "      <td>Simmel</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-11-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>40006</td>\n",
+       "      <td>e0003</td>\n",
+       "      <td>1959-12-03</td>\n",
+       "      <td>Parto</td>\n",
+       "      <td>Bamford</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-08-28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>40054</td>\n",
+       "      <td>e0003</td>\n",
+       "      <td>1954-05-01</td>\n",
+       "      <td>Chirstian</td>\n",
+       "      <td>Koblick</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10005</td>\n",
+       "      <td>78228</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1955-01-21</td>\n",
+       "      <td>Kyoichi</td>\n",
+       "      <td>Maliniak</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1989-09-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300019</th>\n",
+       "      <td>499995</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>e0002</td>\n",
+       "      <td>1958-09-24</td>\n",
+       "      <td>Dekang</td>\n",
+       "      <td>Lichtner</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1993-01-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300020</th>\n",
+       "      <td>499996</td>\n",
+       "      <td>58058</td>\n",
+       "      <td>e0003</td>\n",
+       "      <td>1953-03-07</td>\n",
+       "      <td>Zito</td>\n",
+       "      <td>Baaz</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1990-09-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300021</th>\n",
+       "      <td>499997</td>\n",
+       "      <td>49597</td>\n",
+       "      <td>e0003</td>\n",
+       "      <td>1961-08-03</td>\n",
+       "      <td>Berhard</td>\n",
+       "      <td>Lenart</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1986-04-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300022</th>\n",
+       "      <td>499998</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1956-09-05</td>\n",
+       "      <td>Patricia</td>\n",
+       "      <td>Breugel</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1993-10-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300023</th>\n",
+       "      <td>499999</td>\n",
+       "      <td>63707</td>\n",
+       "      <td>e0002</td>\n",
+       "      <td>1958-05-01</td>\n",
+       "      <td>Sachin</td>\n",
+       "      <td>Tsukuda</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1997-11-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300024 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        emp_no  salaries emp_title_id  birth_date first_name last_name sex  \\\n",
+       "0        10001     60117        e0003  1953-09-02     Georgi   Facello   M   \n",
+       "1        10002     65828        s0001  1964-06-02    Bezalel    Simmel   F   \n",
+       "2        10003     40006        e0003  1959-12-03      Parto   Bamford   M   \n",
+       "3        10004     40054        e0003  1954-05-01  Chirstian   Koblick   M   \n",
+       "4        10005     78228        s0001  1955-01-21    Kyoichi  Maliniak   M   \n",
+       "...        ...       ...          ...         ...        ...       ...  ..   \n",
+       "300019  499995     40000        e0002  1958-09-24     Dekang  Lichtner   F   \n",
+       "300020  499996     58058        e0003  1953-03-07       Zito      Baaz   M   \n",
+       "300021  499997     49597        e0003  1961-08-03    Berhard    Lenart   M   \n",
+       "300022  499998     40000        s0001  1956-09-05   Patricia   Breugel   M   \n",
+       "300023  499999     63707        e0002  1958-05-01     Sachin   Tsukuda   M   \n",
+       "\n",
+       "         hire_date  \n",
+       "0       1986-06-26  \n",
+       "1       1985-11-21  \n",
+       "2       1986-08-28  \n",
+       "3       1986-12-01  \n",
+       "4       1989-09-12  \n",
+       "...            ...  \n",
+       "300019  1993-01-12  \n",
+       "300020  1990-09-27  \n",
+       "300021  1986-04-21  \n",
+       "300022  1993-10-13  \n",
+       "300023  1997-11-30  \n",
+       "\n",
+       "[300024 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_merged=salaries.merge(employees, left_on='emp_no', right_on='emp_no')\n",
+    "new_merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>salaries</th>\n",
+       "      <th>emp_title_id</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>10002</td>\n",
+       "      <td>65828</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1964-06-02</td>\n",
+       "      <td>Bezalel</td>\n",
+       "      <td>Simmel</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-11-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>10005</td>\n",
+       "      <td>78228</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1955-01-21</td>\n",
+       "      <td>Kyoichi</td>\n",
+       "      <td>Maliniak</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1989-09-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>10007</td>\n",
+       "      <td>56724</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-05-23</td>\n",
+       "      <td>Tzvetan</td>\n",
+       "      <td>Zielinski</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1989-02-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>10011</td>\n",
+       "      <td>42365</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1953-11-07</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Sluis</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1990-01-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>10016</td>\n",
+       "      <td>70889</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1961-05-02</td>\n",
+       "      <td>Kazuhito</td>\n",
+       "      <td>Cappelletti</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1995-01-27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300019</th>\n",
+       "      <td>m0001</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>111534</td>\n",
+       "      <td>48077</td>\n",
+       "      <td>m0001</td>\n",
+       "      <td>1952-06-27</td>\n",
+       "      <td>Hilary</td>\n",
+       "      <td>Kambil</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1988-01-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300020</th>\n",
+       "      <td>m0001</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>111692</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>m0001</td>\n",
+       "      <td>1954-10-05</td>\n",
+       "      <td>Tonny</td>\n",
+       "      <td>Butterworth</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1985-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300021</th>\n",
+       "      <td>m0001</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>111784</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>m0001</td>\n",
+       "      <td>1956-06-14</td>\n",
+       "      <td>Marjo</td>\n",
+       "      <td>Giarratana</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1988-02-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300022</th>\n",
+       "      <td>m0001</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>111877</td>\n",
+       "      <td>53846</td>\n",
+       "      <td>m0001</td>\n",
+       "      <td>1962-10-18</td>\n",
+       "      <td>Xiaobin</td>\n",
+       "      <td>Spinelli</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1991-08-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300023</th>\n",
+       "      <td>m0001</td>\n",
+       "      <td>Manager</td>\n",
+       "      <td>111939</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>m0001</td>\n",
+       "      <td>1960-03-25</td>\n",
+       "      <td>Yuchang</td>\n",
+       "      <td>Weedman</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1989-07-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300024 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       title_id    title  emp_no  salaries emp_title_id  birth_date  \\\n",
+       "0         s0001    Staff   10002     65828        s0001  1964-06-02   \n",
+       "1         s0001    Staff   10005     78228        s0001  1955-01-21   \n",
+       "2         s0001    Staff   10007     56724        s0001  1957-05-23   \n",
+       "3         s0001    Staff   10011     42365        s0001  1953-11-07   \n",
+       "4         s0001    Staff   10016     70889        s0001  1961-05-02   \n",
+       "...         ...      ...     ...       ...          ...         ...   \n",
+       "300019    m0001  Manager  111534     48077        m0001  1952-06-27   \n",
+       "300020    m0001  Manager  111692     40000        m0001  1954-10-05   \n",
+       "300021    m0001  Manager  111784     40000        m0001  1956-06-14   \n",
+       "300022    m0001  Manager  111877     53846        m0001  1962-10-18   \n",
+       "300023    m0001  Manager  111939     40000        m0001  1960-03-25   \n",
+       "\n",
+       "       first_name    last_name sex   hire_date  \n",
+       "0         Bezalel       Simmel   F  1985-11-21  \n",
+       "1         Kyoichi     Maliniak   M  1989-09-12  \n",
+       "2         Tzvetan    Zielinski   F  1989-02-10  \n",
+       "3            Mary        Sluis   F  1990-01-22  \n",
+       "4        Kazuhito  Cappelletti   M  1995-01-27  \n",
+       "...           ...          ...  ..         ...  \n",
+       "300019     Hilary       Kambil   F  1988-01-31  \n",
+       "300020      Tonny  Butterworth   F  1985-01-01  \n",
+       "300021      Marjo   Giarratana   F  1988-02-12  \n",
+       "300022    Xiaobin     Spinelli   F  1991-08-17  \n",
+       "300023    Yuchang      Weedman   M  1989-07-10  \n",
+       "\n",
+       "[300024 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latest_merge=titles.merge(new_merged, left_on='title_id', right_on='emp_title_id')\n",
+    "latest_merge"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [
@@ -332,7 +871,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "Assistant Engineer    48564.434447\n",
+       "Engineer              48535.336511\n",
+       "Manager               51531.041667\n",
+       "Senior Engineer       48506.799871\n",
+       "Senior Staff          58550.172704\n",
+       "Staff                 58465.382850\n",
+       "Technique Leader      48582.896092\n",
+       "Name: salaries, dtype: float64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_title=latest_merge.groupby(\"title\")[\"salaries\"].mean()\n",
+    "group_title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +976,7 @@
        "Technique Leader    48582.896092"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
